#208, adding scrubbed app_config.yml example file

--- a/config/app_config.yml.example
+++ b/config/app_config.yml.example
@@ -4,6 +4,5 @@ development:
 test:
   host: localhost:3000
 
-# correct for staging. for production: comment-app.hhs.gov?
 production:
-  host: stage-voc.cloud.hhs.gov
+  host: yourserver.domain.local
