--- a/consul-template/README.CONSULTEMP.ENV
+++ b/consul-template/README.CONSULTEMP.ENV
@@ -1,30 +1,31 @@
-APP_ENVIRONMENT         {dev,stg,prod}
+APP_ENVIRONMENT              {dev,stg,prod}
 
 # Service config:
 # ---------------
 
 # Database configuration options
-MYSQL_DB_HOST           service_app_voc/{dev,stg,prod}/database/host
-MYSQL_DB_PORT           service_app_voc/{dev,stg,prod}/database/port
-MYSQL_DB_NAME           service_app_voc/{dev,stg,prod}/database/name
-MYSQL_DB_USER           service_app_voc/{dev,stg,prod}/database/user
+MYSQL_DB_HOST                service_app_voc/{dev,stg,prod}/database/host
+MYSQL_DB_PORT                service_app_voc/{dev,stg,prod}/database/port
+MYSQL_DB_NAME                service_app_voc/{dev,stg,prod}/database/name
+MYSQL_DB_USER                service_app_voc/{dev,stg,prod}/database/user
 
-REDIS_HOST_PORT         service_app_voc/{dev,stg,prod}/redis/host_port
-REDIS_EXPIRE            project_app_voc/{dev,stg,prod}/redis/expire
+REDIS_HOST_PORT              service_app_voc/{dev,stg,prod}/redis/host_port
+REDIS_EXPIRE                 project_app_voc/{dev,stg,prod}/redis/expire
 
 
 
 # Project config:
 # ---------------
 
-RAILS_ENV               project_app_voc/{dev,stg,prod}/rails_env
+RAILS_ENV                    project_app_voc/{dev,stg,prod}/rails_env
+INVITE_SKIP_PARENT_STYLE     project_app_voc/{dev,stg,prod}/invite_skip_parent_style
 
 # public DNS for public and admin apps
-APP_PUBLIC_HOST_PORT    project_app_voc/{dev,stg,prod}/public_port
+APP_PUBLIC_HOST_PORT         project_app_voc/{dev,stg,prod}/public_port
 
-S3_PATH_PREFIX          project_app_voc/{dev,stg,prod}/s3/path_prefix
+S3_PATH_PREFIX               project_app_voc/{dev,stg,prod}/s3/path_prefix
 
 Secret config:
 # ---------------
-RAILS_COOKIE_TOKEN      secret/project/app_voc/{dev,stg,prod}/rails_cookie_token
-MYSQL_DB_PASS           secret/project/app_voc/{dev,stg,prod}/database/pass
+RAILS_COOKIE_TOKEN           secret/project/app_voc/{dev,stg,prod}/rails_cookie_token
+MYSQL_DB_PASS                secret/project/app_voc/{dev,stg,prod}/database/pass
