--- a/consul-template/README.CONSULTEMP.ENV
+++ b/consul-template/README.CONSULTEMP.ENV
@@ -20,6 +20,7 @@ REDIS_EXPIRE                 project_app_voc/{dev,stg,prod}/redis/expire
 RAILS_ENV                    project_app_voc/{dev,stg,prod}/rails_env
 INVITE_SKIP_PARENT_STYLE     project_app_voc/{dev,stg,prod}/invite_skip_parent_style
 SKIP_FIELDSET_MARKUP         project_app_voc/{dev,stg,prod}/skip_fieldset_markup
+USE_START_PAGE               project_app_voc/{dev,stg,prod}/use_start_page
 
 # public DNS for public and admin apps
 APP_PUBLIC_HOST_PORT         project_app_voc/{dev,stg,prod}/public_port
