add google tag manager to surveys

--- a/consul-template/README.CONSULTEMP.ENV
+++ b/consul-template/README.CONSULTEMP.ENV
@@ -26,6 +26,7 @@ USE_START_PAGE               project_app_voc/{dev,stg,prod}/use_start_page
 APP_PUBLIC_HOST_PORT         project_app_voc/{dev,stg,prod}/public_port
 
 S3_PATH_PREFIX               project_app_voc/{dev,stg,prod}/s3/path_prefix
+GTM_CONTAINER                project_app_voc/{dev,stg,prod}/gtm_container
 
 Secret config:
 # ---------------
